# test-clickhouse

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  run_app.sh  run_table_creation.sh
app/src/: config.py  ioc.py  main.py
app/src/application/: interactors.py  interfaces.py
app/src/controllers/: http.py  schemas.py
app/src/infrastructure/: database.py  gateways.py  request.py  types.py
app/src/infrastructure/models/: tables_creation.py
docker_config/: config.xml  create_image.sh  run_conainer.sh  supervisord.conf  users.xml
docs/: 2_specification.md  3_architecture.md  4_quick_start.md  5_routes.md  conf.py  index.rst  quickstart.rst  techical_specification.rst
docs/_build/doctrees/: environment.pickle  index.doctree  quickstart.doctree  technical_specification.doctree
docs/_build/doctrees/modules/: config.doctree  ioc.doctree  main.doctree
docs/_build/doctrees/modules/application/: interactors.doctree  interfaces.doctree
docs/_build/doctrees/modules/controllers/: http.doctree  schemas.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  technical_specification.html
docs/_build/html/_sources/modules/: ioc.rst.txt  (+1 more)
docs/_build/html/modules/: config.html  ioc.html  main.html
docs/modules/: config.rst  ioc.rst  main.rst
docs/modules/application/: interactors.rst
docs/modules/controllers/: schemas.rst
docs/modules/infrastructure/: database.rst  gateways.rst  request.rst  types.rst
docs/modules/infrastructure/models/: tables_creation.rst
(+22 files in other folders)
