[tool.poetry]
name = "test-clickhouse"
version = "0.1.0"
description = "Приложение для работы с Clickhouse"
authors = ["Pashtet Medved <pavelkutia@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.38"
clickhouse-driver = "^0.2.9"
clickhouse-sqlalchemy = "^0.3.2"
aiohttp = "^3.11.12"
dishka = "^1.4.2"
tabulate = "^0.9.0"
requests = "^2.32.3"

[tool.poetry.scripts]
run-app = "app.src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
